# rust_with_mongo

./: README.md  docker-compose.yml
ember/: Dockerfile
ember/ember-app/: package-lock.json  package.json
ember/ember-app/app/: index.html  router.js
ember/ember-app/app/controllers/: login.js
ember/ember-app/app/styles/: app.css
ember/ember-app/app/templates/: application.hbs  login.hbs  register.hbs
ember/ember-app/tests/unit/controllers/dashboard/new/: barrica-test.js  oleao-test.js
ember/ember-app/tests/unit/routes/dashboard/new/: barrica-test.js  oleao-test.js
mongodb/: Dockerfile  startDB.js
rust/: Dockerfile
rust/rest_rust_app/: Cargo.toml
rust/rest_rust_app/src/: main.rs
